[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/RecyclerView/ListItem.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="ListItem" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -208.0
margin_bottom = -512.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameFriendReqLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Holaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AceptarButton" type="Button" parent="."]
margin_left = 528.0
margin_top = 9.0
margin_right = 608.0
margin_bottom = 55.0
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RechazarButton" type="Button" parent="."]
margin_left = 680.0
margin_top = 9.0
margin_right = 768.0
margin_bottom = 55.0
text = "Rechazar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="AceptarButton" to="." method="_on_AceptarButton_pressed"]
[connection signal="pressed" from="RechazarButton" to="." method="_on_RechazarButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
